versions/0.8.2/_sources/refs/_aws-cdk_aws-servicediscovery.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"/+8TOT53VCEmVZMwn5veYbSuLIa1k1NqmBoz4kUGIXw="}

@aws-cdk/aws-servicediscovery
=============================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/servicediscovery/0.8.2/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:servicediscovery:jar:0.8.2'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="servicediscovery" rev="0.8.2"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>servicediscovery</artifactId>
           <version>0.8.2</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:servicediscovery:0.8.2'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='servicediscovery', version='0.8.2')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-servicediscovery/v/0.8.2>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-servicediscovery@0.8.2

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-servicediscovery": "^0.8.2"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-servicediscovery@0.8.2


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-servicediscovery/v/0.8.2>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-servicediscovery@0.8.2

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-servicediscovery": "^0.8.2"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-servicediscovery@0.8.2



.. mdinclude:: ./__aws-cdk_aws-servicediscovery.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-servicediscovery

PrivateDnsNamespaceArn
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PrivateDnsNamespaceArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.PrivateDnsNamespaceArn;

      .. code-tab:: javascript

         const { PrivateDnsNamespaceArn } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { PrivateDnsNamespaceArn } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PrivateDnsNamespaceId
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PrivateDnsNamespaceId([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.PrivateDnsNamespaceId;

      .. code-tab:: javascript

         const { PrivateDnsNamespaceId } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { PrivateDnsNamespaceId } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PublicDnsNamespaceArn
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PublicDnsNamespaceArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.PublicDnsNamespaceArn;

      .. code-tab:: javascript

         const { PublicDnsNamespaceArn } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { PublicDnsNamespaceArn } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PublicDnsNamespaceId
^^^^^^^^^^^^^^^^^^^^

.. py:class:: PublicDnsNamespaceId([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.PublicDnsNamespaceId;

      .. code-tab:: javascript

         const { PublicDnsNamespaceId } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { PublicDnsNamespaceId } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ServiceArn
^^^^^^^^^^

.. py:class:: ServiceArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.ServiceArn;

      .. code-tab:: javascript

         const { ServiceArn } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { ServiceArn } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ServiceId
^^^^^^^^^

.. py:class:: ServiceId([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.ServiceId;

      .. code-tab:: javascript

         const { ServiceId } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { ServiceId } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ServiceName
^^^^^^^^^^^

.. py:class:: ServiceName([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.ServiceName;

      .. code-tab:: javascript

         const { ServiceName } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { ServiceName } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-servicediscovery.cloudformation

InstanceResource
~~~~~~~~~~~~~~~~

.. py:class:: InstanceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.InstanceResource;

      .. code-tab:: javascript

         const { cloudformation.InstanceResource } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { cloudformation.InstanceResource } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``InstanceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``InstanceResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.InstanceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


InstanceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: InstanceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.InstanceResourceProps;

      .. code-tab:: javascript

         // cloudformation.InstanceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.InstanceResourceProps } from '@aws-cdk/aws-servicediscovery';





   .. py:attribute:: instanceAttributes

      ``AWS::ServiceDiscovery::Instance.InstanceAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-instance.html#cfn-servicediscovery-instance-instanceattributes


      :type: json or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serviceId

      ``AWS::ServiceDiscovery::Instance.ServiceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-instance.html#cfn-servicediscovery-instance-serviceid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: instanceId

      ``AWS::ServiceDiscovery::Instance.InstanceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-instance.html#cfn-servicediscovery-instance-instanceid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PrivateDnsNamespaceResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PrivateDnsNamespaceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.PrivateDnsNamespaceResource;

      .. code-tab:: javascript

         const { cloudformation.PrivateDnsNamespaceResource } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { cloudformation.PrivateDnsNamespaceResource } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PrivateDnsNamespaceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PrivateDnsNamespaceResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.PrivateDnsNamespaceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: privateDnsNamespaceArn

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.PrivateDnsNamespaceArn` *(readonly)*


   .. py:attribute:: privateDnsNamespaceId

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.PrivateDnsNamespaceId` *(readonly)*


PrivateDnsNamespaceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PrivateDnsNamespaceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.PrivateDnsNamespaceResourceProps;

      .. code-tab:: javascript

         // cloudformation.PrivateDnsNamespaceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PrivateDnsNamespaceResourceProps } from '@aws-cdk/aws-servicediscovery';





   .. py:attribute:: privateDnsNamespaceName

      ``AWS::ServiceDiscovery::PrivateDnsNamespace.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-privatednsnamespace.html#cfn-servicediscovery-privatednsnamespace-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: vpc

      ``AWS::ServiceDiscovery::PrivateDnsNamespace.Vpc``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-privatednsnamespace.html#cfn-servicediscovery-privatednsnamespace-vpc


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::ServiceDiscovery::PrivateDnsNamespace.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-privatednsnamespace.html#cfn-servicediscovery-privatednsnamespace-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PublicDnsNamespaceResource
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PublicDnsNamespaceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.PublicDnsNamespaceResource;

      .. code-tab:: javascript

         const { cloudformation.PublicDnsNamespaceResource } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { cloudformation.PublicDnsNamespaceResource } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PublicDnsNamespaceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PublicDnsNamespaceResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.PublicDnsNamespaceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: publicDnsNamespaceArn

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.PublicDnsNamespaceArn` *(readonly)*


   .. py:attribute:: publicDnsNamespaceId

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.PublicDnsNamespaceId` *(readonly)*


PublicDnsNamespaceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PublicDnsNamespaceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.PublicDnsNamespaceResourceProps;

      .. code-tab:: javascript

         // cloudformation.PublicDnsNamespaceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PublicDnsNamespaceResourceProps } from '@aws-cdk/aws-servicediscovery';





   .. py:attribute:: publicDnsNamespaceName

      ``AWS::ServiceDiscovery::PublicDnsNamespace.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-publicdnsnamespace.html#cfn-servicediscovery-publicdnsnamespace-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::ServiceDiscovery::PublicDnsNamespace.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-publicdnsnamespace.html#cfn-servicediscovery-publicdnsnamespace-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ServiceResource
~~~~~~~~~~~~~~~

.. py:class:: ServiceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.ServiceResource;

      .. code-tab:: javascript

         const { cloudformation.ServiceResource } = require('@aws-cdk/aws-servicediscovery');

      .. code-tab:: typescript

         import { cloudformation.ServiceResource } from '@aws-cdk/aws-servicediscovery';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ServiceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ServiceResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.ServiceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: serviceArn

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.ServiceArn` *(readonly)*


   .. py:attribute:: serviceId

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.ServiceId` *(readonly)*


   .. py:attribute:: serviceName

      :type: :py:class:`~@aws-cdk/aws-servicediscovery.ServiceName` *(readonly)*

   .. py:class:: DnsConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.servicediscovery.cloudformation.ServiceResource.DnsConfigProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.DnsConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.DnsConfigProperty } from '@aws-cdk/aws-servicediscovery';





      .. py:attribute:: dnsRecords

         ``ServiceResource.DnsConfigProperty.DnsRecords``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-dnsconfig.html#cfn-servicediscovery-service-dnsconfig-dnsrecords


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.ServiceResource.DnsRecordProperty`


      .. py:attribute:: namespaceId

         ``ServiceResource.DnsConfigProperty.NamespaceId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-dnsconfig.html#cfn-servicediscovery-service-dnsconfig-namespaceid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: DnsRecordProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.servicediscovery.cloudformation.ServiceResource.DnsRecordProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.DnsRecordProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.DnsRecordProperty } from '@aws-cdk/aws-servicediscovery';





      .. py:attribute:: ttl

         ``ServiceResource.DnsRecordProperty.TTL``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-dnsrecord.html#cfn-servicediscovery-service-dnsrecord-ttl


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``ServiceResource.DnsRecordProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-dnsrecord.html#cfn-servicediscovery-service-dnsrecord-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: HealthCheckConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.servicediscovery.cloudformation.ServiceResource.HealthCheckConfigProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.HealthCheckConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.HealthCheckConfigProperty } from '@aws-cdk/aws-servicediscovery';





      .. py:attribute:: failureThreshold

         ``ServiceResource.HealthCheckConfigProperty.FailureThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-healthcheckconfig.html#cfn-servicediscovery-service-healthcheckconfig-failurethreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: resourcePath

         ``ServiceResource.HealthCheckConfigProperty.ResourcePath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-healthcheckconfig.html#cfn-servicediscovery-service-healthcheckconfig-resourcepath


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``ServiceResource.HealthCheckConfigProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicediscovery-service-healthcheckconfig.html#cfn-servicediscovery-service-healthcheckconfig-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ServiceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ServiceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicediscovery.cloudformation.ServiceResourceProps;

      .. code-tab:: javascript

         // cloudformation.ServiceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ServiceResourceProps } from '@aws-cdk/aws-servicediscovery';





   .. py:attribute:: dnsConfig

      ``AWS::ServiceDiscovery::Service.DnsConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-service.html#cfn-servicediscovery-service-dnsconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.ServiceResource.DnsConfigProperty`


   .. py:attribute:: description

      ``AWS::ServiceDiscovery::Service.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-service.html#cfn-servicediscovery-service-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: healthCheckConfig

      ``AWS::ServiceDiscovery::Service.HealthCheckConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-service.html#cfn-servicediscovery-service-healthcheckconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicediscovery.cloudformation.ServiceResource.HealthCheckConfigProperty` or undefined


   .. py:attribute:: serviceName

      ``AWS::ServiceDiscovery::Service.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicediscovery-service.html#cfn-servicediscovery-service-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-servicediscovery

